# AMDL

./: README.md  README_en.md  build.py  installer.nsi  pyproject.toml  启动.bat
gui/src/app/: layout.tsx  page.tsx
gui/src/app/about/: page.tsx
gui/src/app/history/: page.tsx
gui/src/app/settings/: page.tsx
gui/src/app/tasks/: page.tsx
gui/src/components/: ClientLayout.tsx  DragOrder.tsx  Sidebar.tsx
gui/src/lib/: i18n.tsx
src/amdl/: __init__.py  config_manager.py  converter.py  core_downloader.py  server.py  task_manager.py
