[project]
name = "applemusic-dl"
description = "一个功能强大的 Apple Music 下载工具，支持下载歌曲、音乐视频。"
requires-python = ">=3.10"
authors = [{ name = "DerekH-233" }]
dependencies = [
    "gamdl",
    "click",
    "colorama",
    "pillow",
    "fastapi",
    "uvicorn",
    "pydantic"
]
readme = "README.md"
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/DerekH-233/AMDL"
repository = "https://github.com/DerekH-233/AMDL"

[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project.scripts]
amdl = "amdl.cli:main"

[tool.flit.module]
name = "amdl"
